# rust_fullstack_template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
