[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shared = { version = "0.1.0", path = "../shared" }
